# mcp-analyst-toolkit

./: LICENSE  README.md  pyproject.toml
src/: test.ipynb
src/mcp_server/: __init__.py  server.py
src/mcp_server/prompts/: __init__.py  clickhouse_query.py
src/mcp_server/resources/: __init__.py  change_log.py
src/mcp_server/resources/change_log/2025_q1/: changelog.json
src/mcp_server/resources/change_log/2025_q2/: changelog.json
src/mcp_server/tools/: __init__.py  clickhouse.py  github.py
